--- a/open311/index.html
+++ b/open311/index.html
@@ -2,6 +2,8 @@
   <head>
     <title>Firebase Leaderboard Example</title>
 
+    <script src="./node_modules/json-formatter-js/dist/bundle.js"></script>
+    <link rel="stylesheet" href="./node_modules/json-formatter-js/dist/style.css">
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.0.2/firebase.js"></script>
 
