highlight suspended data

--- a/open311/index.html
+++ b/open311/index.html
@@ -35,6 +35,13 @@
       Highest score so far: <span id="highestScoreDiv"></span>
     </div>
 </div>
+    <hr>
+    SUSPENDED
+    <hr>
+    <div id="data-suspended"></div>
+    <hr>
+    ALL DATA
+    <hr>
     <div id="data"></div>
   </body>
 </html>
