highlight suspended data

--- a/open311/index.html
+++ b/open311/index.html
@@ -40,6 +40,10 @@
     <hr>
     <div id="data-suspended"></div>
     <hr>
+    SUSPENDED-UPDATES
+    <hr>
+    <div id="data-suspended-updates"></div>
+    <hr>
     ALL DATA
     <hr>
     <div id="data"></div>
